# works

./: README.md
IM即时通信软件/: introduce  readme.md
IM即时通信软件/src/client/: chatdialog.cpp  client.cpp  client.ui  home.cpp  receivefiledialog.cpp  registerdialog.cpp  sendfiledialog.cpp  sendfiledialog.h  userinfo.cpp
IM即时通信软件/src/server/: server.cpp
万可琳AI肌肤影像分析仪/: introduce  readme.md
文物多源异构信息三维可视化平台/: readme.md
文物多源异构信息三维可视化平台/src/: HelpTab.qml  HelpToolGroup.qml  ImageButton.qml  MessageHub.cpp  MessageHub.h  OCCWidget.cpp  OCCWidget.h  OCCWindow.cpp  OCCWindow.h  OpenImageThread.cpp  OpenImageThread.h  QThread_SMACC.cpp  QThread_SMACC.h  RibbonBar.qml  SwitchMenu.qml  ThreeDBasicToolGroup.qml  ThreeDRetrieveGroup.qml  ThreeDRetrieveTab.qml  readme.md
高光谱润滑油智能检测仪客户端软件/: readme.md
高光谱润滑油智能检测仪客户端软件/src/: CMakeLists.txt  readme.md
高光谱润滑油智能检测仪客户端软件/src/src/PgGUI/: CMakeLists.txt  Pg_SDC_GUI_Database.cpp  Pg_SDC_GUI_Database.h  main.cpp
高光谱润滑油智能检测仪客户端软件/src/src/PgGUI/PgDM/: Pg_SDC_GUI_DataManagementWidget.cpp  Pg_SDC_GUI_DataManagementWidget.h  Pg_SDC_GUI_EntryWidget.cpp  Pg_SDC_GUI_EntryWidget.h
高光谱润滑油智能检测仪客户端软件/src/src/PgGUI/PgHelp/: Pg_SDC_GUI_HelpWidget.cpp  Pg_SDC_GUI_HelpWidget.h
高光谱润滑油智能检测仪客户端软件/src/vendosrc/: readme
高光谱润滑油智能检测仪客户端软件/src/vendosrc/QXlsx/: xlsxstyles.cpp  xlsxzipwriter.cpp
高光谱润滑油智能检测仪客户端软件/src/vendosrc/mosquitto/: mosquitto.h
高光谱润滑油智能检测仪客户端软件/src/vendosrc/qwt/: qwt_compass_rose.cpp  qwt_dial_needle.cpp  qwt_painter.cpp  qwt_panner.cpp  qwt_picker.cpp  qwt_plot_canvas.cpp  qwt_plot_glcanvas.cpp  qwt_plot_renderer.cpp  qwt_plot_shapeitem.cpp  qwt_symbol.cpp
